fix: added test and removed unreachable case